--- a/locales/he.yml
+++ b/locales/he.yml
@@ -1,8 +1,32 @@
-start:
-  welcome: "ברוך הבא! אנא בחר שפה:"
-  language:
-    english: "אנגלית"
-    hebrew: "עברית"
-
-menu:
-  choose_wine: "בחר יין להוספה לעגלה:"
+hebrew:
+  choose_language: "אנא בחר את השפה המועדפת עליך:"
+  language_selection_message: "לחץ על אחד מהכפתורים לבחירת שפה:"
+  language_selection_confirmation: "הבחירה שלך אושרה."
+  english: "אנגלית"
+  hebrew: "עברית"
+  confirm_phone: "מספר הטלפון הנוכחי שלך הוא: %{phone}. האם זהו המספר הנכון?"
+  yes: "כן"
+  no_change_number: "לא, אני רוצה להשתמש במספר אחר"
+  share_phone: "אנא שתף את מספר הטלפון שלך להמשך:"
+  send_phone: "שלח את מספר הטלפון שלי"
+  phone_received: "מספר הטלפון התקבל! עכשיו תוכל להתחיל להזמין."
+  browse_all_wines: "עיין בכל היינות"
+  browse_red_wines: "עיין ביינות אדומים"
+  browse_white_wines: "עיין ביינות לבנים"
+  view_cart: "הצג את העגלה שלי"
+  submit_order: "שלח הזמנה"
+  order_summary: "סיכום הזמנה:\n\n"
+  empty_cart: "העגלה שלך ריקה כרגע."
+  cart_current: "\n\nהעגלה הנוכחית:\n"
+  item_added: "%{item} נוסף לעגלה."
+  cart_items: "פריטים בעגלה:\n"
+  submit_order_button: "שלח הזמנה"
+  start_new_order: "התחל הזמנה חדשה"
+  new_order_cleared: "אתה יכול להתחיל הזמנה חדשה."
+  order_thanks: "תודה על הזמנתך! ניצור איתך קשר בקרוב במספר הטלפון: %{phone}, מספר הזמנה: %{order_id}"
+  order_contact: "מספר טלפון ליצירת קשר: %{phone}"
+  order_id: "מספר הזמנה: %{order_id}"
+  wine_added: "%{wine} נוסף לעגלה."
+  order_failed: "אירעה שגיאה בעת עיבוד ההזמנה. אנא נסה שוב."
+  back_to_main_menu: "חזור לתפריט הראשי"
+  order_details: "מספר הזמנה: %{order_id}\nשם הלקוח: %{customer_name}\nמספר טלפון: %{phone}\n\nפריטים:\n%{items}"
